syntax = "proto3";

package pirep;

// === Commands ===

message SubmitPIREP {
    string pirep_id = 1;    // UUID generated by caller/API
    string tenant_id = 2;
    string user_id = 3;     // Pilot submitting the PIREP
    string aircraft_id = 4; // Identifier for the aircraft used
    string departure_icao = 5;
    string arrival_icao = 6;
    string flight_number = 7; // Optional flight number
    // Add other PIREP details: flight time, fuel used, route, remarks, etc.
    double flight_time_hours = 8;
    string remarks = 9;
}

// === Events ===

message PIREPSubmitted {
    string pirep_id = 1;
    string tenant_id = 2;
    string user_id = 3;
    string aircraft_id = 4;
    string departure_icao = 5;
    string arrival_icao = 6;
    string flight_number = 7;
    double flight_time_hours = 8;
    string remarks = 9;
    string timestamp = 10; // ISO 8601 timestamp
    // Add status? e.g., PENDING_APPROVAL
}
